Brought HTML in sync with Rmd.

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&
 Residual standard error: 196800 on 69 degrees of freedom
 Multiple R-squared:  0.1864,    Adjusted R-squared:  0.1746 
 F-statistic: 15.81 on 1 and 69 DF,  p-value: 0.0001701</code></pre>
-<p>Firearms are statistically significant and have negative coefficient in the regression, therefore <strong>more firearms means less homicide</strong>.</p>
+<p>Firearms are statistically significant and have negative coefficient in the regression, therefore in developed countries <strong>more firearms means less homicide</strong>.</p>
 </div>
 <div id="data-sources" class="section level2">
 <h2>Data Sources</h2>
